# tmx

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md
.github/scripts/: update-homebrew-formula.sh
.github/workflows/: update-homebrew.yml
examples/: tmx.toml
src/: cli.rs  config.rs  context.rs  log.rs  main.rs  session.rs  tmux.rs
src/commands/: completions.rs  cycle.rs  default.rs  init.rs  list.rs  mod.rs  refresh.rs  start.rs  stop.rs  validate.rs
src/shells/: bash.rs  fish.rs  mod.rs  zsh.rs
