[package]
name = "tmx"
version = "0.0.2"
edition = "2024"
authors = ["hjz"]
description = "A tmux session manager with declarative TOML configuration"
license = "Unlicense"
repository = "https://github.com/hjz/fishmux"

[[bin]]
name = "tmx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
shellexpand = "3.1"
dirs = "5.0"
once_cell = "1.19"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
